changing figure 2, adding more descriptive text

--- a/desc_text.Rmd
+++ b/desc_text.Rmd
@@ -31,6 +31,6 @@ Our group is interested in what factors contribute to the success or failure of 
 ## Data Description
 Our project uses two large datasets:
 <br>
-1. [A NFL play-by-play data from 2009 to 2018 from Kaggle](https://www.kaggle.com/maxhorowitz/nflplaybyplay2009to2016)
+1. [A NFL play-by-play dataset from 2009 to 2018 from Kaggle](https://www.kaggle.com/maxhorowitz/nflplaybyplay2009to2016)
 <br>
 2. [A betting and weather dataset from Kaggle](https://www.kaggle.com/tobycrabtree/nfl-scores-and-betting-data#spreadspoke_scores.csv) focusing on the spread, over/under line, stadium type, and weather conditions
