--- a/exploration_1.Rmd
+++ b/exploration_1.Rmd
@@ -6,3 +6,8 @@ output: md_document
 ---
 # Exploration
 We conducted exploratory data analysis on our datasets to gain a better understanding of how two-point conversions are being played in the NFL.
+<br>
+<br>
+
+### Figure 1: All Post-TD Plays in the NFL from 2009 to 2018
+This figure explores the breakdown of extra point kick attempts and two-point conversion attempts by year. The dashed gray line at the year 2015 represents the year the rule change was made. After 2015, we do see a general increased in the proportion of two-point conversion attempts per year. 
