--- a/logistic_mod.Rmd
+++ b/logistic_mod.Rmd
@@ -12,7 +12,12 @@ two_points <- read_csv("two_point_attempts.csv") %>%
          weather_detail = as.factor(weather_detail))
 # str(two_points)
 ```
-# Logistic Regression
+# Modeling
+We tried a couple statistical methods to predict whether a two-point conversion would be successful or not. We shared our work and results here.
+<br>
+<br>
+
+## Model 1: Logistic Regression
 We created a logistic regression model to determine what variables were significant in predicting the success probability of a two-point conversion. Because we are testing our thesis that a run play is a more successful option than a pass play, we included numerous variables that quantify the team's success with running the ball in the game up until the two-point conversion attempt.
 <br>
 ```{r}
@@ -23,6 +28,18 @@ summary(glm_twopt)
 
 ```{r include=FALSE}
 quantile(two_points$prop_runs_greater_than_2_yards, na.rm = T)
+```
+<br>
+
+### Model 1: Data Vis
+Uses a binomial modeling technique to graph relationship between probability of successful two-point conversion and changing x axis 
+```{r}
+#Increasing probability of two point conversion success based on number of total passing yards
+pass_yards_convprob <- ggplot(two_points, aes(x = total_pass_yards, y = two_point_conv_result)) + 
+  geom_point() + 
+  stat_smooth(method = "glm", method.args = list(family="binomial"), se = FALSE)
+
+pass_yards_convprob
 ```
 
 
