Added more viz to the modeling page, change expl_3 graph to be success rate instead of attempt

--- a/exploration_2.Rmd
+++ b/exploration_2.Rmd
@@ -8,4 +8,4 @@ output: md_document
 <br> 
 
 ### Figure 2: Two-Point Conversions by Play Type from 2009-2018
-This figure explores the breakdown of play type and success rates of two-point conversions by year. As you can see, run plays have had a higher success rate in two-point conversions than pass plays have for every year except 2014.
+This figure explores the breakdown of play type and success rates of two-point conversions by year. As you can see, run plays have had a higher success rate in two-point conversion attempts than pass plays have for every year except 2014.
