--- a/exploration_3.Rmd
+++ b/exploration_3.Rmd
@@ -8,5 +8,5 @@ output: md_document
 <br>
 <br>
 
-### Figure 3: Proportion of Two-Point Conversion Attempts Based on Score Differential and Game Time Remaining
-Testing testing 123
+### Figure 3: Success Rate of Two-Point Conversions Based on Score Differential and Game Time Remaining
+This figure explores the how the success rate of two-point conversions depending on score diffential and minutes remaining in the match, which are two commonly use predictors to decide whether to go for two or not.
