--- a/introduction.Rmd
+++ b/introduction.Rmd
@@ -4,7 +4,7 @@ author: "Amanda Elert"
 date: "4/21/2020"
 output: md_document
 ---
-# Background
+# Introduction
 **Authors:** Amanda Elert, Mike Hoffmann, and Bobby Pfefferle 
 <br>
 **Class:** Statistics 479 - Spring 2020
