--- a/methods_results.Rmd
+++ b/methods_results.Rmd
@@ -7,7 +7,11 @@ output: md_document
 ```{r message=FALSE, warning=FALSE, include=FALSE}
 library(tidyverse)
 library(lubridate)
-library(MASS)
+library(caret)
+library(factoextra)
+library(e1071)
+#library(MASS)
+
 two_points <- read_csv("two_point_attempts.csv") %>% 
   mutate(play_type = as.factor(play_type),
          weather_detail = as.factor(weather_detail)) %>% 
@@ -27,7 +31,9 @@ glm_twopt <- glm(two_point_conv_result ~ prop_runs_greater_than_2_yards + prop_p
 <br>
 We then used the stepAIC function to select the best predictors to use in our logistic regression model. This is the model that the stepAIC function selected. 
 ```{r include=FALSE}
-aic_glm <- stepAIC(glm_twopt)
+# aic_glm <- stepAIC(glm_twopt)
+# The MASS package messes up the Select dplyr function, so we are commenting out the stepAIC function and just setting the function to what the stepAIC function gave us.
+aic_glm <- glm(two_point_conv_result ~ total_pass_yards + num_passes + play_type + game_seconds_remaining, family = binomial(link= "logit"), data = two_points, na.action = na.exclude)
 ```
 
 ```{r}
@@ -39,7 +45,7 @@ quantile(two_points$prop_runs_greater_than_2_yards, na.rm = T)
 ```
 <br>
 
-### Model 1: Data Vis
+### Model 1: Data Visualization
 We use a binomial modeling technique to graph relationship between probability of successful two-point conversion and the predictors.
 <br>
 <br>
@@ -72,5 +78,94 @@ ggplot(two_points, aes(x = game_seconds_remaining/60, y = two_point_conv_result)
   stat_smooth(method = "glm", method.args = list(family="binomial"), se = FALSE) +
   labs(x = "Game Minutes Remaining (At the 2PT Conv. Attempt)", y = "Probability of 2PT Conv. Success")
 ```
+<br>
+<br>
+<br>
+<br>
 
+## Model 2: Support Vector Machine
+MIKE EDIT HERE
+<br>
+```{r include=FALSE}
+svm_df <- two_points %>%
+  select(two_point_conv_result,
+         score_differential,
+         score_differential_post,
+         completion_percentage,
+         qtr,
+         game_seconds_remaining,
+         total_yards_gained,
+         num_runs,
+         num_passes,play_num,
+         num_runs_greater_than_2yds,
+         num_runs_greater_than_2yds,
+         prop_runs_greater_than_2_yards,
+         prop_passes_greater_than_2_yards,
+         avg_yards_per_run,
+         avg_yards_per_pass)
 
+svm_df <- drop_na(svm_df)
+
+variables_lowCorrelation1 <- svm_df %>%
+  select(two_point_conv_result,
+         score_differential,
+         total_yards_gained,
+         prop_passes_greater_than_2_yards,
+         completion_percentage,
+         prop_runs_greater_than_2_yards,
+         game_seconds_remaining)
+```
+
+```{r}
+accuracyList = 0
+for (i in (1:100)){
+  variables_lowCorrelation <- na.omit(variables_lowCorrelation1)
+  n <- nrow(variables_lowCorrelation)
+  ntrain <- round(n*.9)
+  svm_plays <- sample(n, ntrain)
+  train_plays <- variables_lowCorrelation[svm_plays,]
+  test_plays <- variables_lowCorrelation[-svm_plays,]
+  
+  model <- svm(formula = two_point_conv_result ~ ., data = train_plays, type = 'C-classification', kernel = 'polynomial')
+  
+  radialPredict = predict(model, test_plays)
+  confusion <- confusionMatrix(table(test_plays$two_point_conv_result, radialPredict))
+  accuracyList <- accuracyList + confusion$overall[["Accuracy"]]
+}
+
+accuracyList/100
+```
+<br>
+<br>
+
+### Model 2: Data Visualization
+ARE WE DOING THIS?
+<br>
+<br>
+<br>
+<br>
+
+## Model 3: Principle Component Analysis
+MIKE ADD HERE
+<br>
+```{r}
+run.pr <- prcomp(svm_df[1:15], center = TRUE, scale = TRUE)
+```
+<br>
+<br>
+
+### Model 3: Data Visualization
+```{r}
+fviz_pca_ind(run.pr, geom.ind = "point", pointshape = 21, 
+             pointsize = 2, 
+             fill.ind = as.factor(svm_df$two_point_conv_result), 
+             col.ind = "black", 
+             palette = "jco", 
+             addEllipses = TRUE,
+             label = "var",
+             col.var = "black",
+             repel = TRUE,
+             legend.title = "2-Point Conversion Result") +
+  ggtitle("2D PCA-plot from 15 feature dataset") +
+  theme(plot.title = element_text(hjust = 0.5))
+```
