--- a/methods_results.Rmd
+++ b/methods_results.Rmd
@@ -84,11 +84,10 @@ ggplot(two_points, aes(x = game_seconds_remaining/60, y = two_point_conv_result)
 <br>
 
 ## Model 2: Support Vector Machine
-
 For further exploration, we implemented a Support Vector Machine to attempt to find an optimal boundary to predict whether a two-point conversion would be successful or unsuccessful depending on game features leading up to that two-point conversion play. 
-
-Based off of the implementation below, we predicted on our out-of-sample dataset with 49% accuracy, which is just below chance for our dependent variable. This low accuracy could be attributed to overfitting within the model. Further work to improve this model would be to optimize the hyperparameters. This could include possibly trianing with more data, or removing irrelevant input features. 
-
+<br>
+<br>
+Based off of the implementation below, we predicted on our testing subset with 49% accuracy, which is just below chance for our dependent variable. This low accuracy could be attributed to overfitting within the model. Further work to improve this model would be to optimize the hyperparameters. This could include possibly training with more data or removing irrelevant input features. 
 <br>
 ```{r include=FALSE}
 svm_df <- two_points %>%
@@ -143,9 +142,7 @@ accuracyList/100
 <br>
 
 ## Model 3: Principle Component Analysis
-
-To help reduce the feature space in our svm, we attempted to use PCA. The output of PCA on our dataset below did not help us identify variables for extraction, or elimination. We believe that this is due to the fact that our variables are correlated to eachother.
-
+To help reduce the feature space in our SVM, we attempted to use PCA. The output of PCA on our dataset below did not help us identify variables for extraction or elimination. We believe that this is due to the fact that [our variables are correlated to each other which is not an optimal procedure for selecting features](https://towardsdatascience.com/understanding-pca-fae3e243731d).
 <br>
 ```{r}
 run.pr <- prcomp(svm_df[1:15], center = TRUE, scale = TRUE)
